<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_calcAndRes">

        <CheckBoxPreference
            android:key="doRound"
            android:defaultValue="@bool/pref_def_doRound"
            android:title="@string/pref_doRound_title"
            android:summary="@string/pref_doRound_summary"/>

        <ListPreference
            android:key="bracketClosingType"
            android:title="@string/pref_brClosingType_title"
            android:entries="@array/pref_brClosingType_list_titles"
            android:entryValues="@array/pref_brClosingType_list_values"
            android:defaultValue="@string/pref_def_brClosingType" />

        <ListPreference
            android:key="amu"
            android:title="@string/pref_amu_title"
            android:entries="@array/pref_amu_list_titles"
            android:entryValues="@array/pref_amu_list_values"
            android:defaultValue="2" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_history">

        <CheckBoxPreference
            android:key="enabledHistory"
            android:defaultValue="@bool/pref_def_enabledHistory"
            android:title="@string/pref_enabledHistory_title"
            android:summary="@string/pref_enabledHistory_summary"/>

        <ListPreference
            android:key="storingHistory"
            android:dependency="enabledHistory"
            android:title="@string/pref_storingHistory_title"
            android:entries="@array/pref_storingHistory_list_titles"
            android:entryValues="@array/pref_storingHistory_list_values"
            android:defaultValue="@string/pref_def_storingHistory" />

        <Preference
            android:key="clearHistory"
            android:title="@string/pref_clearHistory_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_tips">

        <CheckBoxPreference
            android:key="enabledTips"
            android:defaultValue="@bool/pref_def_enabledTips"
            android:title="@string/pref_enabledTips_title"
            android:summary="@string/pref_enabledTips_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_namespace">

        <Preference
            android:key="clearNamespace"
            android:title="@string/pref_clearNamespace_title"
            android:summary="@string/pref_clearNamespace_summary" />

        <Preference
            android:title="@string/pref_editNamespace_title"
            android:summary="@string/pref_editNamespace_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_theme">

        <Preference
            android:title="@string/pref_editColors_title" />

        <Preference
            android:title="@string/pref_editButtonKits_title" />

    </PreferenceCategory>

</PreferenceScreen>
