<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="roottemplate.calculator.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/AppTheme.DialogAppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_roottemplate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_arote"
                android:textSize="40sp"
                android:typeface="sans"
                android:fontFamily="Arial"
                android:textStyle="bold"
                android:textColor="@color/colorAboutTitles" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_calculator"
                android:typeface="sans"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="Arial"
                android:textColor="@color/colorAboutTitles"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_arote"
                android:onClick="onAroteClick"
                android:layout_gravity="center"
                textAllCaps="false"
                android:textAllCaps="false"
                android:typeface="sans"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_copyright"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:text="@string/about_info"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
